--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 body{
 	position: relative;
-	background: url(../img/banner.png) no-repeat 50% 0;
+	background: url(../img/banner.png) no-repeat center;
 		
 	}
 
@@ -13,16 +13,11 @@ body{
 }
 
 .container{
-	background: -webkit-linear-gradient(top,rgba(255,255,255,.85),rgba(255,255,255,.35)); /*Safari*/
-	background: -o-linear-gradient(top,rgba(255,255,255,.85),rgba(255,255,255,.35)); /*Opera 11-12*/
-	background: -moz-linear-gradient(top,rgba(255,255,255,.85),rgba(255,255,255,.35)); /*Fx 3.6-15*/
-	background: linear-gradient(top,rgba(255,255,255,.85),rgba(255,255,255,.35)); /*Standard*/
-	
+	background: linear-gradient(to top, rgba(255,255,255,.8), rgba(255,255,255,.60));
 	  max-width: 960px;
 	  width: 96%;
 	  margin: 0 auto;
 	  height: 65vh;
-	  border-top: solid #F3F3F3 3px;
 }
 
 article{
@@ -59,7 +54,7 @@ li{
   float: left;
 }
 
-nav div li:nth-child(1), div li:nth-child(2){
+div li:nth-child(1), div li:nth-child(2){
   text-align: right;
 }
 
@@ -72,16 +67,10 @@ li>div{
   font-family: 'Quicksand', sans-serif;
 }
 
-/*LINK STYLES*/
-
 a:link{
 	text-decoration: none;
 	color: black;
-	
 	transition: .25s ease-out;
-	-webkit-transition: .25s ease-out;
-	-o-transition: .25s ease-out;
-	-moz-transition: .25s ease-out;
 }
 
 a:visited{
@@ -94,7 +83,7 @@ a:hover{
 }
 
 a:active{
-	color: #FF1FFF;
+	color: white;
 }
 
 /**NAV ANIMATION**/
@@ -119,24 +108,20 @@ a:active{
 /**  CONTENT  **/
 
 h1{
-	font-size: 2.5em;
-	color: #585858;
-	margin-top: 70px;
+	font-size: 2em;
+	color:#333333;
 }
 
 
 h2{
 	color: #626262;
-}
 
-p{
-	margin-left: 50px;
 }
 
 /** SPECIAL PAGES**/
 
 #about{
-	background: url(../img/nav-sprites.png) no-repeat 0% -350px;
+	background: url(../img/nav-sprites.png) no-repeat 0 -350px;
 }
 
 #about:hover{
@@ -167,6 +152,17 @@ p{
 }
 
 
+/*LINKS*/
+#body_links h2{
+	float: left;
+	margin-right: 3%;
+}
+
+/*PORTFOLIO*/
+.art-cosplay div{
+	float: left;
+	margin: 0 5% 0 5%;
+}
 
 
 @media screen and (max-width: 900px){
@@ -178,7 +174,7 @@ p{
 
 
 @media screen and (max-width: 780px){
-li div{
+li>div{
 	font-size: .8em;
 }
 
